# ferrum

./: .gitignore  CREDITS.txt  Cargo.toml  README.md  build.bat  build.rs  example.fm  test.txt
examples/: demo.fm
lib/: TODO.txt
src/: eval.rs  lib.rs  main.rs  parser.rs  repl.rs  runtime.rs  transpiler.rs  ui.rs
src/stdlib/: check.rs  iced_stub.rs  iomod.rs  jsonmod.rs  math.rs  mod.rs  opencv.rs  osmod.rs  random.rs  subprocess.rs  sys.rs  timemod.rs
