[package]
name = "ferrum"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
once_cell = "1.18"
tokio = { version = "1.34", features = ["rt-multi-thread","macros"] }
# Optional real iced integration (enabled with --features real-iced)
iced = { version = "0.9", optional = true }
bincode = { version = "1.3", optional = true }
# OpenCV integration for computer vision
opencv = { version = "0.89", optional = true }

[[bin]]
name = "ferrum"
path = "src/main.rs"

[features]
default = []
real-iced = ["iced"]
opencv-support = ["opencv"]
